<resources>
    <string name="app_name">RMM_Task04_Android</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="name_program">Пример eBook, 2022</string>

    <string name="resource_directory">file:///android_asset/HTML/</string>

    <string name="action_settings">Выход</string>
    <string name="view">Перейти к чтению…</string>
    <string name="fullsizeFont">Большой шрифт</string>
    <string name="bonus">Бонус</string>
    <string name="lit">Литература</string>
    <string name="autor">Мударисов Р.Р ИС302с.</string>

    <string name="additional">Поиск телефона</string>
    <string name="confident">Конфиденциальность</string>
    <string name="confident_url">https://vk.com/licence</string>
    <string name="error">Ошибка(</string>

    <string name="mobile_location">Поиск локации абонента</string>
    <string name="mobile_location_url">https://xn----7sbqamfrkhj2bc3a.com/</string>
    <string name="find_telephone">Поиск телефона</string>
    <string name="find_telephone_url">https://myaccount.google.com/find-your-phone</string>
    https://myaccount.google.com/find-your-phone
    <string name="laws">ЗАКОНЫ</string>
    <string name="laws_kz_l1">РК: оПДиИЗ</string>
    <string name="laws_ru_l1">РФ: оПД</string>
    <string name="communicate">Обратная связь</string>
    <string name="send_mail">Написать отзыв</string>

    <string name="email">proffix4@gmail.com</string>
    <string name="subject">Предложения по программе</string>
    <string name="textmail">Здравствуйте !</string>
    <string name="sending_letter">Посылка письма автору</string>
    <string name="no_installed_email_client">Нет установленного почтового клиента</string>

    <string name="search_hint">Поиск</string>
    <string name="of">из</string>
    <string name="not_found">увы…</string>

    <string name="mysearch">ВКЛ. ПОИСК</string>

</resources>
